commit bilingual contents

--- a/docs/docs-ref-autogen/office/office/office.filtertype.yml
+++ b/docs/docs-ref-autogen/office/office/office.filtertype.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.FilterType:enum'
-    summary: <span data-ttu-id="62a55-101">指定检索数据时是否应用从宿主应用程序筛选。</span><span class="sxs-lookup"><span data-stu-id="62a55-101">Specifies whether filtering from the host application is applied when the data is retrieved.</span></span>
+    summary: 指定检索数据时是否应用从宿主应用程序筛选。
     name: Office.FilterType
     fullName: Office.FilterType
     langs:
@@ -12,14 +12,14 @@ items:
       - 'office!Office.FilterType.All:member'
       - 'office!Office.FilterType.OnlyVisible:member'
   - uid: 'office!Office.FilterType.All:member'
-    summary: <span data-ttu-id="62a55-102">返回所有数据（不经过宿主应用程序筛选）。</span><span class="sxs-lookup"><span data-stu-id="62a55-102">Return all data (not filtered by the host application).</span></span>
+    summary: 返回所有数据（不经过宿主应用程序筛选）。
     name: All
     fullName: All
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.FilterType.OnlyVisible:member'
-    summary: <span data-ttu-id="62a55-103">仅返回可视数据（由于经过宿主应用程序筛选）。</span><span class="sxs-lookup"><span data-stu-id="62a55-103">Return only the visible data (as filtered by the host application).</span></span>
+    summary: 仅返回可视数据（由于经过宿主应用程序筛选）。
     name: OnlyVisible
     fullName: OnlyVisible
     langs:
