--- a/docs/docs-ref-autogen/word/word/word.locationrelation.yml
+++ b/docs/docs-ref-autogen/word/word/word.locationrelation.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.LocationRelation:enum'
-    summary: '<span data-ttu-id="72274-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="72274-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
     name: Word.LocationRelation
     fullName: Word.LocationRelation
     langs:
@@ -24,7 +24,7 @@ items:
       - 'word!Word.LocationRelation.overlapsBefore:member'
       - 'word!Word.LocationRelation.unrelated:member'
   - uid: 'word!Word.LocationRelation.adjacentAfter:member'
-    summary: '<span data-ttu-id="72274-102">指示此实例在范围后发生，并与范围相邻。</span><span class="sxs-lookup"><span data-stu-id="72274-102">Indicates that this instance occurs after, and is adjacent to, the range.</span></span>'
+    summary: 指示此实例在范围后发生，并与范围相邻。
     name: adjacentAfter
     fullName: adjacentAfter
     langs:
@@ -32,7 +32,7 @@ items:
     type: field
     numericValue: '"AdjacentAfter"'
   - uid: 'word!Word.LocationRelation.adjacentBefore:member'
-    summary: '<span data-ttu-id="72274-103">指示此实例在范围之前发生，并与范围相邻。</span><span class="sxs-lookup"><span data-stu-id="72274-103">Indicates that this instance occurs before, and is adjacent to, the range.</span></span>'
+    summary: 指示此实例在范围之前发生，并与范围相邻。
     name: adjacentBefore
     fullName: adjacentBefore
     langs:
@@ -40,7 +40,7 @@ items:
     type: field
     numericValue: '"AdjacentBefore"'
   - uid: 'word!Word.LocationRelation.after:member'
-    summary: <span data-ttu-id="72274-104">指示此实例在范围之后发生。</span><span class="sxs-lookup"><span data-stu-id="72274-104">Indicates that this instance occurs after the range.</span></span>
+    summary: 指示此实例在范围之后发生。
     name: after
     fullName: after
     langs:
@@ -48,7 +48,7 @@ items:
     type: field
     numericValue: '"After"'
   - uid: 'word!Word.LocationRelation.before:member'
-    summary: <span data-ttu-id="72274-105">指示此实例在范围之前发生。</span><span class="sxs-lookup"><span data-stu-id="72274-105">Indicates that this instance occurs before the range.</span></span>
+    summary: 指示此实例在范围之前发生。
     name: before
     fullName: before
     langs:
@@ -56,7 +56,7 @@ items:
     type: field
     numericValue: '"Before"'
   - uid: 'word!Word.LocationRelation.contains:member'
-    summary: '<span data-ttu-id="72274-106">指示此实例包含范围，但此实例的起始字符和结束字符除外。</span><span class="sxs-lookup"><span data-stu-id="72274-106">Indicates that this instance contains the range, with the exception of the start and end character of this instance.</span></span>'
+    summary: 指示此实例包含范围，但此实例的起始字符和结束字符除外。
     name: contains
     fullName: contains
     langs:
@@ -64,7 +64,7 @@ items:
     type: field
     numericValue: '"Contains"'
   - uid: 'word!Word.LocationRelation.containsEnd:member'
-    summary: <span data-ttu-id="72274-107">指示此实例包含范围，并且共享同一个结束字符。</span><span class="sxs-lookup"><span data-stu-id="72274-107">Indicates that this instance contains the range and that it shares the same end character.</span></span> <span data-ttu-id="72274-108">不过，范围并不与此实例共用同一个起始字符。</span><span class="sxs-lookup"><span data-stu-id="72274-108">The range does not share the same start character as this instance.</span></span>
+    summary: 指示此实例包含范围，并且共享同一个结束字符。 不过，范围并不与此实例共用同一个起始字符。
     name: containsEnd
     fullName: containsEnd
     langs:
@@ -72,7 +72,7 @@ items:
     type: field
     numericValue: '"ContainsEnd"'
   - uid: 'word!Word.LocationRelation.containsStart:member'
-    summary: <span data-ttu-id="72274-109">指示此实例包含范围，并共享相同的开始字符。</span><span class="sxs-lookup"><span data-stu-id="72274-109">Indicates that this instance contains the range and that it shares the same start character.</span></span> <span data-ttu-id="72274-110">不过，范围并不与此实例共用同一个结束字符。</span><span class="sxs-lookup"><span data-stu-id="72274-110">The range does not share the same end character as this instance.</span></span>
+    summary: 指示此实例包含范围，并共享相同的开始字符。 不过，范围并不与此实例共用同一个结束字符。
     name: containsStart
     fullName: containsStart
     langs:
@@ -80,7 +80,7 @@ items:
     type: field
     numericValue: '"ContainsStart"'
   - uid: 'word!Word.LocationRelation.equal:member'
-    summary: <span data-ttu-id="72274-111">指示此实例和区域表示相同范围。</span><span class="sxs-lookup"><span data-stu-id="72274-111">Indicates that this instance and the range represent the same range.</span></span>
+    summary: 指示此实例和区域表示相同范围。
     name: equal
     fullName: equal
     langs:
@@ -88,7 +88,7 @@ items:
     type: field
     numericValue: '"Equal"'
   - uid: 'word!Word.LocationRelation.inside:member'
-    summary: <span data-ttu-id="72274-112">指示此实例位于范围内。</span><span class="sxs-lookup"><span data-stu-id="72274-112">Indicates that this instance is inside the range.</span></span> <span data-ttu-id="72274-113">范围并不与此实例共用同一个起始字符和结束字符。</span><span class="sxs-lookup"><span data-stu-id="72274-113">The range does not share the same start and end characters as this instance.</span></span>
+    summary: 指示此实例位于范围内。 范围并不与此实例共用同一个起始字符和结束字符。
     name: inside
     fullName: inside
     langs:
@@ -96,7 +96,7 @@ items:
     type: field
     numericValue: '"Inside"'
   - uid: 'word!Word.LocationRelation.insideEnd:member'
-    summary: <span data-ttu-id="72274-114">指示此实例位于范围内，并且共享同一个结束字符。</span><span class="sxs-lookup"><span data-stu-id="72274-114">Indicates that this instance is inside the range and that it shares the same end character.</span></span> <span data-ttu-id="72274-115">不过，范围并不与此实例共用同一个起始字符。</span><span class="sxs-lookup"><span data-stu-id="72274-115">The range does not share the same start character as this instance.</span></span>
+    summary: 指示此实例位于范围内，并且共享同一个结束字符。 不过，范围并不与此实例共用同一个起始字符。
     name: insideEnd
     fullName: insideEnd
     langs:
@@ -104,7 +104,7 @@ items:
     type: field
     numericValue: '"InsideEnd"'
   - uid: 'word!Word.LocationRelation.insideStart:member'
-    summary: <span data-ttu-id="72274-116">指示此实例位于范围内，并且共享相同的开始字符。</span><span class="sxs-lookup"><span data-stu-id="72274-116">Indicates that this instance is inside the range and that it shares the same start character.</span></span> <span data-ttu-id="72274-117">不过，范围并不与此实例共用同一个结束字符。</span><span class="sxs-lookup"><span data-stu-id="72274-117">The range does not share the same end character as this instance.</span></span>
+    summary: 指示此实例位于范围内，并且共享相同的开始字符。 不过，范围并不与此实例共用同一个结束字符。
     name: insideStart
     fullName: insideStart
     langs:
@@ -112,7 +112,7 @@ items:
     type: field
     numericValue: '"InsideStart"'
   - uid: 'word!Word.LocationRelation.overlapsAfter:member'
-    summary: <span data-ttu-id="72274-118">指示此实例在范围内开始，并与范围的最后一个字符重叠。</span><span class="sxs-lookup"><span data-stu-id="72274-118">Indicates that this instance starts inside the range and overlaps the range’s last character.</span></span>
+    summary: 指示此实例在范围内开始，并与范围的最后一个字符重叠。
     name: overlapsAfter
     fullName: overlapsAfter
     langs:
@@ -120,7 +120,7 @@ items:
     type: field
     numericValue: '"OverlapsAfter"'
   - uid: 'word!Word.LocationRelation.overlapsBefore:member'
-    summary: <span data-ttu-id="72274-119">指示此实例在范围之前开始，并与范围的第一个字符重叠。</span><span class="sxs-lookup"><span data-stu-id="72274-119">Indicates that this instance starts before the range and overlaps the range’s first character.</span></span>
+    summary: 指示此实例在范围之前开始，并与范围的第一个字符重叠。
     name: overlapsBefore
     fullName: overlapsBefore
     langs:
@@ -128,7 +128,7 @@ items:
     type: field
     numericValue: '"OverlapsBefore"'
   - uid: 'word!Word.LocationRelation.unrelated:member'
-    summary: <span data-ttu-id="72274-120">指示此实例和范围位于不同的子文档中。</span><span class="sxs-lookup"><span data-stu-id="72274-120">Indicates that this instance and the range are in different sub-documents.</span></span>
+    summary: 指示此实例和范围位于不同的子文档中。
     name: unrelated
     fullName: unrelated
     langs:
