--- a/docs/docs-ref-autogen/word/word/word.verticalalignment.yml
+++ b/docs/docs-ref-autogen/word/word/word.verticalalignment.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'word!Word.VerticalAlignment:enum'
-    summary: '<span data-ttu-id="544d9-101">\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="544d9-101">\[ [API set: WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]'
     name: Word.VerticalAlignment
     fullName: Word.VerticalAlignment
     langs:
