--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.rangeviewupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.rangeviewupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeViewUpdateData:interface'
-    summary: '<span data-ttu-id="a1660-101">一个用于更新 RangeView 对象上的数据的接口，可用于`rangeView.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="a1660-101">An interface for updating data on the RangeView object, for use in `rangeView.set({ ... })`</span></span><!-- --><span data-ttu-id="a1660-102">.</span><span class="sxs-lookup"><span data-stu-id="a1660-102"></span></span>'
+    summary: '一个用于更新 RangeView 对象上的数据的接口，可用于`rangeView.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RangeViewUpdateData
     fullName: Excel.Interfaces.RangeViewUpdateData
     langs:
