--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.shapefillupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.shapefillupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeFillUpdateData:interface'
-    summary: '<span data-ttu-id="2844c-101">一个用于更新 ShapeFill 对象上的数据的接口，可用于`shapeFill.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="2844c-101">An interface for updating data on the ShapeFill object, for use in `shapeFill.set({ ... })`</span></span><!-- --><span data-ttu-id="2844c-102">.</span><span class="sxs-lookup"><span data-stu-id="2844c-102"></span></span>'
+    summary: '一个用于更新 ShapeFill 对象上的数据的接口，可用于`shapeFill.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ShapeFillUpdateData
     fullName: Excel.Interfaces.ShapeFillUpdateData
     langs:
