--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.shapefontdata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.shapefontdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeFontData:interface'
-    summary: <span data-ttu-id="4840b-101">描述通过调用返回的数据的接口`shapeFont.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="4840b-101">An interface describing the data returned by calling `shapeFont.toJSON()`</span></span><!-- --><span data-ttu-id="4840b-102">.</span><span class="sxs-lookup"><span data-stu-id="4840b-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`shapeFont.toJSON()`<!-- -->.
     name: Excel.Interfaces.ShapeFontData
     fullName: Excel.Interfaces.ShapeFontData
     langs:
