--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.shapelineformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.shapelineformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatData:interface'
-    summary: <span data-ttu-id="55ba5-101">描述通过调用返回的数据的接口`shapeLineFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="55ba5-101">An interface describing the data returned by calling `shapeLineFormat.toJSON()`</span></span><!-- --><span data-ttu-id="55ba5-102">.</span><span class="sxs-lookup"><span data-stu-id="55ba5-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`shapeLineFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ShapeLineFormatData
     fullName: Excel.Interfaces.ShapeLineFormatData
     langs:
