--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.documentpropertiesupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.documentpropertiesupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.DocumentPropertiesUpdateData:interface'
-    summary: '<span data-ttu-id="eaaeb-101">一个用于更新 DocumentProperties 对象上的数据的接口，可用于`documentProperties.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="eaaeb-101">An interface for updating data on the DocumentProperties object, for use in `documentProperties.set({ ... })`</span></span><!-- --><span data-ttu-id="eaaeb-102">.</span><span class="sxs-lookup"><span data-stu-id="eaaeb-102"></span></span>'
+    summary: '一个用于更新 DocumentProperties 对象上的数据的接口，可用于`documentProperties.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.DocumentPropertiesUpdateData
     fullName: Excel.Interfaces.DocumentPropertiesUpdateData
     langs:
