--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.filterpivothierarchyupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.filterpivothierarchyupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.FilterPivotHierarchyUpdateData:interface'
-    summary: '<span data-ttu-id="8ec9c-101">一个用于更新 FilterPivotHierarchy 对象上的数据的接口，可用于`filterPivotHierarchy.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="8ec9c-101">An interface for updating data on the FilterPivotHierarchy object, for use in `filterPivotHierarchy.set({ ... })`</span></span><!-- --><span data-ttu-id="8ec9c-102">.</span><span class="sxs-lookup"><span data-stu-id="8ec9c-102"></span></span>'
+    summary: '一个用于更新 FilterPivotHierarchy 对象上的数据的接口，可用于`filterPivotHierarchy.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.FilterPivotHierarchyUpdateData
     fullName: Excel.Interfaces.FilterPivotHierarchyUpdateData
     langs:
