--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.rangecollectionupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.rangecollectionupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.RangeCollectionUpdateData:interface'
-    summary: '<span data-ttu-id="98081-101">一个用于更新 RangeCollection 对象上的数据的接口，可用于`rangeCollection.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="98081-101">An interface for updating data on the RangeCollection object, for use in `rangeCollection.set({ ... })`</span></span><!-- --><span data-ttu-id="98081-102">.</span><span class="sxs-lookup"><span data-stu-id="98081-102"></span></span>'
+    summary: '一个用于更新 RangeCollection 对象上的数据的接口，可用于`rangeCollection.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.RangeCollectionUpdateData
     fullName: Excel.Interfaces.RangeCollectionUpdateData
     langs:
