--- a/docs/docs-ref-autogen/excel_1_10/excel/excel.headerfooter.yml
+++ b/docs/docs-ref-autogen/excel_1_10/excel/excel.headerfooter.yml
@@ -26,7 +26,7 @@ items:
       - 'excel!Excel.HeaderFooter#toJSON:member(1)'
   - uid: 'excel!Excel.HeaderFooter#centerFooter:member'
     summary: |-
-      工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
+      工作表的中心页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerFooter
@@ -41,7 +41,7 @@ items:
           - string
   - uid: 'excel!Excel.HeaderFooter#centerHeader:member'
     summary: |-
-      工作表的中间标头。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
+      工作表的中间标头。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: centerHeader
@@ -68,7 +68,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.HeaderFooter#leftFooter:member'
     summary: |-
-      工作表的左页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
+      工作表的左页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftFooter
@@ -83,7 +83,7 @@ items:
           - string
   - uid: 'excel!Excel.HeaderFooter#leftHeader:member'
     summary: |-
-      工作表的左页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
+      工作表的左页眉。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: leftHeader
@@ -97,7 +97,7 @@ items:
         type:
           - string
   - uid: 'excel!Excel.HeaderFooter#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -115,7 +115,7 @@ items:
           type:
             - 'excel!Excel.Interfaces.HeaderFooterLoadOptions:interface'
   - uid: 'excel!Excel.HeaderFooter#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -133,7 +133,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.HeaderFooter#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -151,7 +151,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -160,7 +160,7 @@ items:
                       }
   - uid: 'excel!Excel.HeaderFooter#rightFooter:member'
     summary: |-
-      工作表的右页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
+      工作表的右页脚。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightFooter
@@ -175,7 +175,7 @@ items:
           - string
   - uid: 'excel!Excel.HeaderFooter#rightHeader:member'
     summary: |-
-      工作表的右侧标头。 若要应用字体格式或插入变量值，请使用此处指定的格式https://msdn.microsoft.com/library/bb225426.aspx代码：。
+      工作表的右侧标头。 若要应用字体格式或插入变量值，请使用此处指定的格式代码： https://msdn.microsoft.com/library/bb225426.aspx 。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rightHeader
@@ -233,7 +233,7 @@ items:
           type:
             - 'excel!Excel.HeaderFooter:class'
   - uid: 'excel!Excel.HeaderFooter#toJSON:member(1)'
-    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 HeaderFooter 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.HeaderFooterData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
+    summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也 `toJSON` 会调用传递给它的对象的方法。尽管原始 HeaderFooter 对象是 API 对象，但 `toJSON` 方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.HeaderFooterData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
