--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.functionresultdata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.functionresultdata.yml
@@ -16,7 +16,7 @@ items:
       - 'excel!Excel.Interfaces.FunctionResultData#value:member'
   - uid: 'excel!Excel.Interfaces.FunctionResultData#error:member'
     summary: |-
-      表示错误的错误值（\#如 "DIV/0"）。 如果未设置错误字符串，则函数成功，并将其结果写入值字段。 该错误始终位于英语区域设置中。
+      表示错误的错误值（如 " \# DIV/0"）。 如果未设置错误字符串，则函数成功，并将其结果写入值字段。 该错误始终位于英语区域设置中。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: error
