--- a/docs/docs-ref-autogen/office/office/office.activeview.yml
+++ b/docs/docs-ref-autogen/office/office/office.activeview.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.ActiveView:enum'
-    summary: '<span data-ttu-id="f5d51-101">指定文档活动视图的状态，例如，用户是否可以编辑文档。</span><span class="sxs-lookup"><span data-stu-id="f5d51-101">Specifies the state of the active view of the document, for example, whether the user can edit the document.</span></span>'
+    summary: 指定文档活动视图的状态，例如，用户是否可以编辑文档。
     name: Office.ActiveView
     fullName: Office.ActiveView
     langs:
@@ -12,14 +12,14 @@ items:
       - 'office!Office.ActiveView.Edit:member'
       - 'office!Office.ActiveView.Read:member'
   - uid: 'office!Office.ActiveView.Edit:member'
-    summary: <span data-ttu-id="f5d51-102">主机应用程序的活动视图允许用户编辑文档中的内容。</span><span class="sxs-lookup"><span data-stu-id="f5d51-102">The active view of the host application lets the user edit the content in the document.</span></span>
+    summary: 主机应用程序的活动视图允许用户编辑文档中的内容。
     name: Edit
     fullName: Edit
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.ActiveView.Read:member'
-    summary: <span data-ttu-id="f5d51-103">主机应用程序的活动视图只允许用户阅读文档中的内容。</span><span class="sxs-lookup"><span data-stu-id="f5d51-103">The active view of the host application only lets the user read the content in the document.</span></span>
+    summary: 主机应用程序的活动视图只允许用户阅读文档中的内容。
     name: Read
     fullName: Read
     langs:
