commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.customxmlnode.yml
+++ b/docs/docs-ref-autogen/office/office/office.customxmlnode.yml
@@ -86,7 +86,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是 CustomXmlNode 对象的数组，这些对象代表传递给`xPath`参数的 XPath 表达式指定的节点。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是 CustomXmlNode 对象的数组，这些对象代表传递给参数的 XPath 表达式指定的节点 `xPath` 。'
           type:
             - 'office!Office.CustomXmlNode#getNodesAsync~0:complex'
   - uid: 'office!Office.CustomXmlNode#getNodesAsync:member(2)'
@@ -133,7 +133,7 @@ items:
           type:
             - string
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是 CustomXmlNode 对象的数组，这些对象代表传递给`xPath`参数的 XPath 表达式指定的节点。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是 CustomXmlNode 对象的数组，这些对象代表传递给参数的 XPath 表达式指定的节点 `xPath` 。'
           type:
             - 'office!Office.CustomXmlNode#getNodesAsync~1:complex'
   - uid: 'office!Office.CustomXmlNode#getNodeValueAsync:member(1)'
@@ -156,7 +156,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个字符串，其中包含引用的节点的值。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个字符串，其中包含引用的节点的值。'
           type:
             - 'office!Office.CustomXmlNode#getNodeValueAsync~0:complex'
   - uid: 'office!Office.CustomXmlNode#getNodeValueAsync:member(2)'
@@ -199,7 +199,7 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个字符串，其中包含引用的节点的值。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个字符串，其中包含引用的节点的值。'
           type:
             - 'office!Office.CustomXmlNode#getNodeValueAsync~1:complex'
   - uid: 'office!Office.CustomXmlNode#getTextAsync:member(1)'
@@ -261,7 +261,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个字符串，其中包含引用节点的内部文本。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个字符串，其中包含引用节点的内部文本。'
           type:
             - 'office!Office.CustomXmlNode#getTextAsync~0:complex'
   - uid: 'office!Office.CustomXmlNode#getTextAsync:member(2)'
@@ -280,7 +280,7 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个字符串，其中包含引用节点的内部文本。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个字符串，其中包含引用节点的内部文本。'
           type:
             - 'office!Office.CustomXmlNode#getTextAsync~1:complex'
   - uid: 'office!Office.CustomXmlNode#getXmlAsync:member(1)'
@@ -303,7 +303,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个字符串，其中包含引用的节点的 XML。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个字符串，其中包含引用的节点的 XML。'
           type:
             - 'office!Office.CustomXmlNode#getXmlAsync~0:complex'
   - uid: 'office!Office.CustomXmlNode#getXmlAsync:member(2)'
@@ -346,7 +346,7 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个字符串，其中包含引用的节点的 XML。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个字符串，其中包含引用的节点的 XML。'
           type:
             - 'office!Office.CustomXmlNode#getXmlAsync~1:complex'
   - uid: 'office!Office.CustomXmlNode#namespaceUri:member'
