--- a/docs/docs-ref-autogen/office/office/office.customxmlparts.yml
+++ b/docs/docs-ref-autogen/office/office/office.customxmlparts.yml
@@ -40,7 +40,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是新创建的 CustomXmlPart 对象。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是新创建的 CustomXmlPart 对象。'
           type:
             - 'office!Office.CustomXmlParts#addAsync~0:complex'
   - uid: 'office!Office.CustomXmlParts#addAsync:member(2)'
@@ -90,7 +90,7 @@ items:
           type:
             - string
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是新创建的 CustomXmlPart 对象。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是新创建的 CustomXmlPart 对象。'
           type:
             - 'office!Office.CustomXmlParts#addAsync~1:complex'
   - uid: 'office!Office.CustomXmlParts#getByIdAsync:member(1)'
@@ -136,7 +136,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个 CustomXmlPart 对象，该对象表示指定的自定义 XML 部件。 如果没有具有指定 id 的自定义 XML 部件，该方法将返回 null。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个 CustomXmlPart 对象，该对象表示指定的自定义 XML 部件。 如果没有具有指定 id 的自定义 XML 部件，该方法将返回 null。'
           type:
             - 'office!Office.CustomXmlParts#getByIdAsync~0:complex'
   - uid: 'office!Office.CustomXmlParts#getByIdAsync:member(2)'
@@ -159,7 +159,7 @@ items:
           type:
             - string
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个 CustomXmlPart 对象，该对象表示指定的自定义 XML 部件。 如果没有具有指定 id 的自定义 XML 部件，该方法将返回 null。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个 CustomXmlPart 对象，该对象表示指定的自定义 XML 部件。 如果没有具有指定 id 的自定义 XML 部件，该方法将返回 null。'
           type:
             - 'office!Office.CustomXmlParts#getByIdAsync~1:complex'
   - uid: 'office!Office.CustomXmlParts#getByNamespaceAsync:member(1)'
@@ -186,7 +186,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是与指定的命名空间匹配的 CustomXmlPart 对象的数组。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是与指定的命名空间匹配的 CustomXmlPart 对象的数组。'
           type:
             - 'office!Office.CustomXmlParts#getByNamespaceAsync~0:complex'
   - uid: 'office!Office.CustomXmlParts#getByNamespaceAsync:member(2)'
@@ -226,7 +226,7 @@ items:
           type:
             - string
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是与指定的命名空间匹配的 CustomXmlPart 对象的数组。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是与指定的命名空间匹配的 CustomXmlPart 对象的数组。'
           type:
             - 'office!Office.CustomXmlParts#getByNamespaceAsync~1:complex'
 references:
