--- a/docs/docs-ref-autogen/office/office/office.customxmlprefixmappings.yml
+++ b/docs/docs-ref-autogen/office/office/office.customxmlprefixmappings.yml
@@ -107,7 +107,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个字符串，其中包含映射到指定前缀的命名空间。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个字符串，其中包含映射到指定前缀的命名空间。'
           type:
             - 'office!Office.CustomXmlPrefixMappings#getNamespaceAsync~0:complex'
   - uid: 'office!Office.CustomXmlPrefixMappings#getNamespaceAsync:member(2)'
@@ -133,7 +133,7 @@ items:
           type:
             - string
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个字符串，其中包含映射到指定前缀的命名空间。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个字符串，其中包含映射到指定前缀的命名空间。'
           type:
             - 'office!Office.CustomXmlPrefixMappings#getNamespaceAsync~1:complex'
   - uid: 'office!Office.CustomXmlPrefixMappings#getPrefixAsync:member(1)'
@@ -163,7 +163,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个字符串，其中包含指定命名空间的前缀。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个字符串，其中包含指定命名空间的前缀。'
           type:
             - 'office!Office.CustomXmlPrefixMappings#getPrefixAsync~0:complex'
   - uid: 'office!Office.CustomXmlPrefixMappings#getPrefixAsync:member(2)'
@@ -189,7 +189,7 @@ items:
           type:
             - string
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个字符串，其中包含指定命名空间的前缀。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个字符串，其中包含指定命名空间的前缀。'
           type:
             - 'office!Office.CustomXmlPrefixMappings#getPrefixAsync~1:complex'
 references:
