commit bilingual contents

--- a/docs/docs-ref-autogen/office/office/office.customxmlnodetype.yml
+++ b/docs/docs-ref-autogen/office/office/office.customxmlnodetype.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.CustomXMLNodeType:enum'
-    summary: <span data-ttu-id="7f188-101">指定 XML 节点的类型。</span><span class="sxs-lookup"><span data-stu-id="7f188-101">Specifies the type of the XML node.</span></span>
+    summary: 指定 XML 节点的类型。
     name: Office.CustomXMLNodeType
     fullName: Office.CustomXMLNodeType
     langs:
@@ -17,49 +17,49 @@ items:
       - 'office!Office.CustomXMLNodeType.ProcessingInstruction:member'
       - 'office!Office.CustomXMLNodeType.Text:member'
   - uid: 'office!Office.CustomXMLNodeType.Attribute:member'
-    summary: <span data-ttu-id="7f188-102">节点为属性。</span><span class="sxs-lookup"><span data-stu-id="7f188-102">The node is an attribute.</span></span>
+    summary: 节点为属性。
     name: Attribute
     fullName: Attribute
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.CustomXMLNodeType.CData:member'
-    summary: <span data-ttu-id="7f188-103">节点是 CData。</span><span class="sxs-lookup"><span data-stu-id="7f188-103">The node is CData.</span></span>
+    summary: 节点是 CData。
     name: CData
     fullName: CData
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.CustomXMLNodeType.Element:member'
-    summary: <span data-ttu-id="7f188-104">节点为元素。</span><span class="sxs-lookup"><span data-stu-id="7f188-104">The node is an element.</span></span>
+    summary: 节点为元素。
     name: Element
     fullName: Element
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.CustomXMLNodeType.NodeComment:member'
-    summary: <span data-ttu-id="7f188-105">节点为注释。</span><span class="sxs-lookup"><span data-stu-id="7f188-105">The node is a comment.</span></span>
+    summary: 节点为注释。
     name: NodeComment
     fullName: NodeComment
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.CustomXMLNodeType.NodeDocument:member'
-    summary: <span data-ttu-id="7f188-106">节点为 Document 元素。</span><span class="sxs-lookup"><span data-stu-id="7f188-106">The node is a Document element.</span></span>
+    summary: 节点为 Document 元素。
     name: NodeDocument
     fullName: NodeDocument
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.CustomXMLNodeType.ProcessingInstruction:member'
-    summary: <span data-ttu-id="7f188-107">节点为处理指令。</span><span class="sxs-lookup"><span data-stu-id="7f188-107">The node is a processing instruction.</span></span>
+    summary: 节点为处理指令。
     name: ProcessingInstruction
     fullName: ProcessingInstruction
     langs:
       - typeScript
     type: field
   - uid: 'office!Office.CustomXMLNodeType.Text:member'
-    summary: <span data-ttu-id="7f188-108">节点为文本。</span><span class="sxs-lookup"><span data-stu-id="7f188-108">The node is text.</span></span>
+    summary: 节点为文本。
     name: Text
     fullName: Text
     langs:
