--- a/docs/docs-ref-autogen/office/office/office.customxmlparts.yml
+++ b/docs/docs-ref-autogen/office/office/office.customxmlparts.yml
@@ -1,8 +1,8 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.CustomXmlParts:interface'
-    summary: <span data-ttu-id="9c5a9-101">表示 CustomXmlPart 对象的集合。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-101">Represents a collection of CustomXmlPart objects.</span></span>
-    remarks: '<span data-ttu-id="9c5a9-102">**主机**： Word</span><span class="sxs-lookup"><span data-stu-id="9c5a9-102">**Hosts**: Word</span></span>'
+    summary: 表示 CustomXmlPart 对象的集合。
+    remarks: '**主机**： Word'
     name: Office.CustomXmlParts
     fullName: Office.CustomXmlParts
     langs:
@@ -17,8 +17,8 @@ items:
       - 'office!Office.CustomXmlParts#getByNamespaceAsync:member(1)'
       - 'office!Office.CustomXmlParts#getByNamespaceAsync:member(2)'
   - uid: 'office!Office.CustomXmlParts#addAsync:member(1)'
-    summary: <span data-ttu-id="9c5a9-103">将新的自定义 XML 部件异步添加到文件中。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-103">Asynchronously adds a new custom XML part to a file.</span></span>
-    remarks: '<span data-ttu-id="9c5a9-104">**要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span><span class="sxs-lookup"><span data-stu-id="9c5a9-104">**Requirement set**: [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span></span>'
+    summary: 将新的自定义 XML 部件异步添加到文件中。
+    remarks: '**要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)'
     name: 'addAsync(xml, options, callback)'
     fullName: 'addAsync(xml, options, callback)'
     langs:
@@ -32,23 +32,23 @@ items:
         description: ''
       parameters:
         - id: xml
-          description: <span data-ttu-id="9c5a9-105">要添加到新创建的自定义 XML 部件的 XML。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-105">The XML to add to the newly created custom XML part.</span></span>
+          description: 要添加到新创建的自定义 XML 部件的 XML。
           type:
             - string
         - id: options
-          description: '<span data-ttu-id="9c5a9-106">提供一个选项，用于保留任何类型的未更改的上下文数据，以供在回调中使用。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-106">Provides an option for preserving context data of any type, unchanged, for use in a callback.</span></span>'
+          description: 提供一个选项，用于保留任何类型的未更改的上下文数据，以供在回调中使用。
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '<span data-ttu-id="9c5a9-107">可选。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-107">Optional.</span></span> <span data-ttu-id="9c5a9-108">回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "</span><span class="sxs-lookup"><span data-stu-id="9c5a9-108">A function that is invoked when the callback returns, whose only parameter is of type [Office.AsyncResult](xref:office!Office.AsyncResult:interface)</span></span><!-- --><span data-ttu-id="9c5a9-109">.</span><span class="sxs-lookup"><span data-stu-id="9c5a9-109"></span></span> <span data-ttu-id="9c5a9-110">结果`value`的属性是新创建的 CustomXmlPart 对象。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-110">The `value` property of the result is the newly created CustomXmlPart object.</span></span>'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是新创建的 CustomXmlPart 对象。'
           type:
             - 'office!Office.CustomXmlParts#addAsync~0:complex'
   - uid: 'office!Office.CustomXmlParts#addAsync:member(2)'
-    summary: <span data-ttu-id="9c5a9-111">将新的自定义 XML 部件异步添加到文件中。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-111">Asynchronously adds a new custom XML part to a file.</span></span>
+    summary: 将新的自定义 XML 部件异步添加到文件中。
     remarks: |-
-      <span data-ttu-id="9c5a9-112">**要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span><span class="sxs-lookup"><span data-stu-id="9c5a9-112">**Requirement set**: [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span></span>
+      **要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)
 
-      #### <a name="examples"></a><span data-ttu-id="9c5a9-113">示例</span><span class="sxs-lookup"><span data-stu-id="9c5a9-113">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       function addXMLPart() {
@@ -86,19 +86,19 @@ items:
         description: ''
       parameters:
         - id: xml
-          description: <span data-ttu-id="9c5a9-114">要添加到新创建的自定义 XML 部件的 XML。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-114">The XML to add to the newly created custom XML part.</span></span>
+          description: 要添加到新创建的自定义 XML 部件的 XML。
           type:
             - string
         - id: callback
-          description: '<span data-ttu-id="9c5a9-115">可选。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-115">Optional.</span></span> <span data-ttu-id="9c5a9-116">回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "</span><span class="sxs-lookup"><span data-stu-id="9c5a9-116">A function that is invoked when the callback returns, whose only parameter is of type [Office.AsyncResult](xref:office!Office.AsyncResult:interface)</span></span><!-- --><span data-ttu-id="9c5a9-117">.</span><span class="sxs-lookup"><span data-stu-id="9c5a9-117"></span></span> <span data-ttu-id="9c5a9-118">结果`value`的属性是新创建的 CustomXmlPart 对象。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-118">The `value` property of the result is the newly created CustomXmlPart object.</span></span>'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是新创建的 CustomXmlPart 对象。'
           type:
             - 'office!Office.CustomXmlParts#addAsync~1:complex'
   - uid: 'office!Office.CustomXmlParts#getByIdAsync:member(1)'
-    summary: <span data-ttu-id="9c5a9-119">以异步方式获取指定的自定义 XML 部件的 id。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-119">Asynchronously gets the specified custom XML part by its id.</span></span>
+    summary: 以异步方式获取指定的自定义 XML 部件的 id。
     remarks: |-
-      <span data-ttu-id="9c5a9-120">**要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span><span class="sxs-lookup"><span data-stu-id="9c5a9-120">**Requirement set**: [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span></span>
+      **要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)
 
-      #### <a name="examples"></a><span data-ttu-id="9c5a9-121">示例</span><span class="sxs-lookup"><span data-stu-id="9c5a9-121">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       function showXMLPartInnerXML() {
@@ -128,20 +128,20 @@ items:
         description: ''
       parameters:
         - id: id
-          description: '<span data-ttu-id="9c5a9-122">自定义 XML 部件的 GUID（包括前后括号）。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-122">The GUID of the custom XML part, including opening and closing braces.</span></span>'
+          description: 自定义 XML 部件的 GUID（包括前后括号）。
           type:
             - string
         - id: options
-          description: '<span data-ttu-id="9c5a9-123">提供一个选项，用于保留任何类型的未更改的上下文数据，以供在回调中使用。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-123">Provides an option for preserving context data of any type, unchanged, for use in a callback.</span></span>'
+          description: 提供一个选项，用于保留任何类型的未更改的上下文数据，以供在回调中使用。
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '<span data-ttu-id="9c5a9-124">可选。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-124">Optional.</span></span> <span data-ttu-id="9c5a9-125">回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "</span><span class="sxs-lookup"><span data-stu-id="9c5a9-125">A function that is invoked when the callback returns, whose only parameter is of type [Office.AsyncResult](xref:office!Office.AsyncResult:interface)</span></span><!-- --><span data-ttu-id="9c5a9-126">.</span><span class="sxs-lookup"><span data-stu-id="9c5a9-126"></span></span> <span data-ttu-id="9c5a9-127">结果`value`的属性是一个 CustomXmlPart 对象，该对象表示指定的自定义 XML 部件。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-127">The `value` property of the result is a CustomXmlPart object that represents the specified custom XML part.</span></span> <span data-ttu-id="9c5a9-128">如果没有具有指定 id 的自定义 XML 部件，该方法将返回 null。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-128">If there is no custom XML part with the specified id, the method returns null.</span></span>'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个 CustomXmlPart 对象，该对象表示指定的自定义 XML 部件。 如果没有具有指定 id 的自定义 XML 部件，该方法将返回 null。'
           type:
             - 'office!Office.CustomXmlParts#getByIdAsync~0:complex'
   - uid: 'office!Office.CustomXmlParts#getByIdAsync:member(2)'
-    summary: <span data-ttu-id="9c5a9-129">以异步方式获取指定的自定义 XML 部件的 id。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-129">Asynchronously gets the specified custom XML part by its id.</span></span>
-    remarks: '<span data-ttu-id="9c5a9-130">**要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span><span class="sxs-lookup"><span data-stu-id="9c5a9-130">**Requirement set**: [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span></span>'
+    summary: 以异步方式获取指定的自定义 XML 部件的 id。
+    remarks: '**要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)'
     name: 'getByIdAsync(id, callback)'
     fullName: 'getByIdAsync(id, callback)'
     langs:
@@ -155,16 +155,16 @@ items:
         description: ''
       parameters:
         - id: id
-          description: '<span data-ttu-id="9c5a9-131">自定义 XML 部件的 GUID（包括前后括号）。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-131">The GUID of the custom XML part, including opening and closing braces.</span></span>'
+          description: 自定义 XML 部件的 GUID（包括前后括号）。
           type:
             - string
         - id: callback
-          description: '<span data-ttu-id="9c5a9-132">可选。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-132">Optional.</span></span> <span data-ttu-id="9c5a9-133">回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "</span><span class="sxs-lookup"><span data-stu-id="9c5a9-133">A function that is invoked when the callback returns, whose only parameter is of type [Office.AsyncResult](xref:office!Office.AsyncResult:interface)</span></span><!-- --><span data-ttu-id="9c5a9-134">.</span><span class="sxs-lookup"><span data-stu-id="9c5a9-134"></span></span> <span data-ttu-id="9c5a9-135">结果`value`的属性是一个 CustomXmlPart 对象，该对象表示指定的自定义 XML 部件。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-135">The `value` property of the result is a CustomXmlPart object that represents the specified custom XML part.</span></span> <span data-ttu-id="9c5a9-136">如果没有具有指定 id 的自定义 XML 部件，该方法将返回 null。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-136">If there is no custom XML part with the specified id, the method returns null.</span></span>'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个 CustomXmlPart 对象，该对象表示指定的自定义 XML 部件。 如果没有具有指定 id 的自定义 XML 部件，该方法将返回 null。'
           type:
             - 'office!Office.CustomXmlParts#getByIdAsync~1:complex'
   - uid: 'office!Office.CustomXmlParts#getByNamespaceAsync:member(1)'
-    summary: <span data-ttu-id="9c5a9-137">以异步方式获取指定的自定义 XML 部件的命名空间。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-137">Asynchronously gets the specified custom XML part(s) by its namespace.</span></span>
-    remarks: '<span data-ttu-id="9c5a9-138">**要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span><span class="sxs-lookup"><span data-stu-id="9c5a9-138">**Requirement set**: [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span></span>'
+    summary: 以异步方式获取指定的自定义 XML 部件的命名空间。
+    remarks: '**要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)'
     name: 'getByNamespaceAsync(ns, options, callback)'
     fullName: 'getByNamespaceAsync(ns, options, callback)'
     langs:
@@ -178,23 +178,23 @@ items:
         description: ''
       parameters:
         - id: ns
-          description: <span data-ttu-id="9c5a9-139">命名空间 URI。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-139">The namespace URI.</span></span>
+          description: 命名空间 URI。
           type:
             - string
         - id: options
-          description: '<span data-ttu-id="9c5a9-140">提供一个选项，用于保留任何类型的未更改的上下文数据，以供在回调中使用。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-140">Provides an option for preserving context data of any type, unchanged, for use in a callback.</span></span>'
+          description: 提供一个选项，用于保留任何类型的未更改的上下文数据，以供在回调中使用。
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '<span data-ttu-id="9c5a9-141">可选。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-141">Optional.</span></span> <span data-ttu-id="9c5a9-142">回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "</span><span class="sxs-lookup"><span data-stu-id="9c5a9-142">A function that is invoked when the callback returns, whose only parameter is of type [Office.AsyncResult](xref:office!Office.AsyncResult:interface)</span></span><!-- --><span data-ttu-id="9c5a9-143">.</span><span class="sxs-lookup"><span data-stu-id="9c5a9-143"></span></span> <span data-ttu-id="9c5a9-144">结果`value`的属性是与指定的命名空间匹配的 CustomXmlPart 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-144">The `value` property of the result is an array of CustomXmlPart objects that match the specified namespace.</span></span>'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是与指定的命名空间匹配的 CustomXmlPart 对象的数组。'
           type:
             - 'office!Office.CustomXmlParts#getByNamespaceAsync~0:complex'
   - uid: 'office!Office.CustomXmlParts#getByNamespaceAsync:member(2)'
-    summary: <span data-ttu-id="9c5a9-145">以异步方式获取指定的自定义 XML 部件的命名空间。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-145">Asynchronously gets the specified custom XML part(s) by its namespace.</span></span>
+    summary: 以异步方式获取指定的自定义 XML 部件的命名空间。
     remarks: |-
-      <span data-ttu-id="9c5a9-146">**要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span><span class="sxs-lookup"><span data-stu-id="9c5a9-146">**Requirement set**: [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)</span></span>
+      **要求集**： [CustomXmlParts](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#customxmlparts)
 
-      #### <a name="examples"></a><span data-ttu-id="9c5a9-147">示例</span><span class="sxs-lookup"><span data-stu-id="9c5a9-147">Examples</span></span>
+      #### <a name="examples"></a>示例
 
       ```javascript
       function showXMLPartsInNamespace() {
@@ -222,11 +222,11 @@ items:
         description: ''
       parameters:
         - id: ns
-          description: <span data-ttu-id="9c5a9-148">命名空间 URI。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-148">The namespace URI.</span></span>
+          description: 命名空间 URI。
           type:
             - string
         - id: callback
-          description: '<span data-ttu-id="9c5a9-149">可选。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-149">Optional.</span></span> <span data-ttu-id="9c5a9-150">回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "</span><span class="sxs-lookup"><span data-stu-id="9c5a9-150">A function that is invoked when the callback returns, whose only parameter is of type [Office.AsyncResult](xref:office!Office.AsyncResult:interface)</span></span><!-- --><span data-ttu-id="9c5a9-151">.</span><span class="sxs-lookup"><span data-stu-id="9c5a9-151"></span></span> <span data-ttu-id="9c5a9-152">结果`value`的属性是与指定的命名空间匹配的 CustomXmlPart 对象的数组。</span><span class="sxs-lookup"><span data-stu-id="9c5a9-152">The `value` property of the result is an array of CustomXmlPart objects that match the specified namespace.</span></span>'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是与指定的命名空间匹配的 CustomXmlPart 对象的数组。'
           type:
             - 'office!Office.CustomXmlParts#getByNamespaceAsync~1:complex'
 references:
