commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charttrendlinelabelformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charttrendlinelabelformatdata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelFormatData:interface'
-    summary: <span data-ttu-id="cce93-101">描述通过调用返回的数据的接口`chartTrendlineLabelFormat.toJSON()`</span><span class="sxs-lookup"><span data-stu-id="cce93-101">An interface describing the data returned by calling `chartTrendlineLabelFormat.toJSON()`</span></span><!-- --><span data-ttu-id="cce93-102">.</span><span class="sxs-lookup"><span data-stu-id="cce93-102"></span></span>
+    summary: 描述通过调用返回的数据的接口`chartTrendlineLabelFormat.toJSON()`<!-- -->.
     name: Excel.Interfaces.ChartTrendlineLabelFormatData
     fullName: Excel.Interfaces.ChartTrendlineLabelFormatData
     langs:
