--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.iconcollections.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.iconcollections.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.IconCollections:interface'
-    summary: '<span data-ttu-id="c6ce3-101">\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c6ce3-101">\[ [API set: ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.IconCollections
     fullName: Excel.IconCollections
     langs:
