--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charttitleformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charttitleformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTitleFormatUpdateData:interface'
-    summary: '<span data-ttu-id="8710d-101">一个用于更新 ChartTitleFormat 对象上的数据的接口，可用于`chartTitleFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="8710d-101">An interface for updating data on the ChartTitleFormat object, for use in `chartTitleFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="8710d-102">.</span><span class="sxs-lookup"><span data-stu-id="8710d-102"></span></span>'
+    summary: '一个用于更新 ChartTitleFormat 对象上的数据的接口，可用于`chartTitleFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartTitleFormatUpdateData
     fullName: Excel.Interfaces.ChartTitleFormatUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartTitleFormatUpdateData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartTitleFormatUpdateData#font:member'
     summary: |-
-      <span data-ttu-id="8710d-103">表示对象的字体属性（字体名称、字体大小、颜色等）。</span><span class="sxs-lookup"><span data-stu-id="8710d-103">Represents the font attributes (font name, font size, color, etc.) for an object.</span></span>
+      表示对象的字体属性（字体名称、字体大小、颜色等）。
 
-      <span data-ttu-id="8710d-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="8710d-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
