--- a/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charttrendlineformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_3/excel/excel.interfaces.charttrendlineformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartTrendlineFormatUpdateData:interface'
-    summary: '<span data-ttu-id="e8f6b-101">一个用于更新 ChartTrendlineFormat 对象上的数据的接口，可用于`chartTrendlineFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="e8f6b-101">An interface for updating data on the ChartTrendlineFormat object, for use in `chartTrendlineFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="e8f6b-102">.</span><span class="sxs-lookup"><span data-stu-id="e8f6b-102"></span></span>'
+    summary: '一个用于更新 ChartTrendlineFormat 对象上的数据的接口，可用于`chartTrendlineFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartTrendlineFormatUpdateData
     fullName: Excel.Interfaces.ChartTrendlineFormatUpdateData
     langs:
