commit translated contents

--- a/docs/docs-ref-autogen/office/office.yml
+++ b/docs/docs-ref-autogen/office/office.yml
@@ -194,7 +194,7 @@ items:
           type:
             - string
   - uid: 'office!Office.onReady:function(1)'
-    summary: 确保 Office JavaScript Api 已准备就绪，可供外接程序调用。 如果该框架尚未初始化，则回拨或承诺将一直等到 Office 主机准备好接受 API 调用。 请注意，虽然此 API 适用于 Office 外接程序，但也可在外接程序外使用。 在这种情况下，一旦 node.js 确定它在 Office 主机应用程序外部运行，它将调用回调并为主机和平台解析 "null" 承诺。
+    summary: 确保 Office JavaScript Api 已准备就绪，可供外接程序调用。 如果该框架尚未初始化，则回拨或承诺将一直等到 Office 主机准备好接受 API 调用。 请注意，虽然此 API 适用于 Office 外接程序，但也可在外接程序外使用。 在这种情况下，一旦 Office.js 确定它在 Office 主机应用程序外部运行，它将调用回调并为主机和平台解析 "null" 承诺。
     name: Office.onReady(callback)
     fullName: Office.onReady(callback)
     langs:
@@ -248,7 +248,7 @@ items:
         description: ''
       parameters:
         - id: expression
-          description: '要检索的对象。 示例 "bindings \# BindingName" 检索名为 "BindingName" 的绑定的绑定承诺'
+          description: 要检索的对象。 示例 "bindings \# BindingName" 检索名为 "BindingName" 的绑定的绑定承诺
           type:
             - string
         - id: callback
