--- a/docs/docs-ref-autogen/office/office/office.asynccontextoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.asynccontextoptions.yml
@@ -11,7 +11,7 @@ items:
     children:
       - 'office!Office.AsyncContextOptions#asyncContext:member'
   - uid: 'office!Office.AsyncContextOptions#asyncContext:member'
-    summary: 在传递给回调的`asyncContext` `AsyncResult`对象的属性中，返回的任何类型的用户定义的项目未更改。
+    summary: 在 `asyncContext` 传递给回调的对象的属性中，返回的任何类型的用户定义的项目未更改 `AsyncResult` 。
     name: asyncContext
     fullName: asyncContext
     langs:
