--- a/docs/docs-ref-autogen/office/office/office.asyncresult.yml
+++ b/docs/docs-ref-autogen/office/office/office.asyncresult.yml
@@ -4,7 +4,7 @@ items:
     summary: |-
       用于封装异步请求的结果的对象，包括状态和错误信息（如果请求失败）。
 
-      当您传递给 "Async" `callback`方法的参数的函数执行时，它会接收您可以从该`callback`函数的唯一参数访问的 AsyncResult 对象。
+      当您传递给 `callback` "Async" 方法的参数的函数执行时，它会接收您可以从该 `callback` 函数的唯一参数访问的 AsyncResult 对象。
     name: Office.AsyncResult
     fullName: Office.AsyncResult
     langs:
@@ -51,7 +51,7 @@ items:
       - 'office!Office.AsyncResult#status:member'
       - 'office!Office.AsyncResult#value:member'
   - uid: 'office!Office.AsyncResult#asyncContext:member'
-    summary: 获取与传入时状态相同的传递给调用`asyncContext`方法的可选参数的用户定义项。 这将返回传递给调用方法的可选`asyncContext`参数的用户定义的项（可以是任何 JavaScript 类型： String、Number、Boolean、Object、Array、Null 或未定义）。 如果您未向  asyncContext 参数传递任何东西，则返回 Undefined 。
+    summary: 获取与传入时状态相同的传递给调用方法的可选参数的用户定义项 `asyncContext` 。 这将返回传递给调用方法的可选参数的用户定义的项（可以是任何 JavaScript 类型： String、Number、Boolean、Object、Array、Null 或未定义） `asyncContext` 。 如果您未向  asyncContext 参数传递任何东西，则返回 Undefined 。
     name: asyncContext
     fullName: asyncContext
     langs:
@@ -173,7 +173,7 @@ items:
   - uid: 'office!Office.AsyncResult#value:member'
     summary: 获取此异步操作的负载或内容（如有）。
     remarks: |-
-      可以在作为参数传递给 "Async" 方法的 callback 参数的函数中访问 AsyncResult 对象，如`getSelectedDataAsync` [Document](xref:office!Office.Document:interface)对象的和`setSelectedDataAsync`方法。
+      可以在作为参数传递给 "Async" 方法的 callback 参数的函数中访问 AsyncResult 对象，如 `getSelectedDataAsync` `setSelectedDataAsync` [Document](xref:office!Office.Document:interface)对象的和方法。
 
       **注意**：对于特定的 "Async" 方法，value 属性的返回值取决于该方法的用途和上下文。 若要确定 value 属性为 "Async" 方法返回了什么内容，请参阅该方法主题的“回调值”部分。
 
