--- a/docs/docs-ref-autogen/office/office/office.coerciontype.yml
+++ b/docs/docs-ref-autogen/office/office/office.coerciontype.yml
@@ -40,7 +40,7 @@ items:
     type: field
   - uid: 'office!Office.CoercionType.Matrix:member'
     summary: |-
-      以不带标题的表格数据形式返回或设置数据。 以包含一维连续文本的字符的数组的数组形式返回或设置数据。 例如，两列的字符串值的三行为： \[ \[\]"R1C1"、"R1C2"、 \["R2C1"、"R2C2"\]、 \["R3C1"、"R3C2"。\]\]
+      以不带标题的表格数据形式返回或设置数据。 以包含一维连续文本的字符的数组的数组形式返回或设置数据。 例如，两列的字符串值的三行为： \[ \[ "R1C1"、"R1C2" \] 、 \[ "R2C1"、"R2C2" \] 、 \[ "R3C1"、"R3C2" \] \] 。
 
       **注意**：仅适用于 Excel 和 Word 中的数据。
     name: Matrix
@@ -60,7 +60,7 @@ items:
     type: field
   - uid: 'office!Office.CoercionType.SlideRange:member'
     summary: |-
-      返回一个 JSON 对象，其中包含所选幻灯片的 ID、标题和索引的数组。 例如， `{"slides":[{"id":257,"title":"Slide 2","index":2},{"id":256,"title":"Slide 1","index":1}]}`选择两张幻灯片。
+      返回一个 JSON 对象，其中包含所选幻灯片的 ID、标题和索引的数组。 例如， `{"slides":[{"id":257,"title":"Slide 2","index":2},{"id":256,"title":"Slide 1","index":1}]}` 选择两张幻灯片。
 
       **注意**：在调用[文档](xref:office!Office.Document:interface)时，仅适用于 PowerPoint 中的数据<!-- -->调用 document.getselecteddata 方法，用于获取当前幻灯片或选定的幻灯片范围。
     name: SlideRange
