commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartpointformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartpointformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPointFormatUpdateData:interface'
-    summary: '<span data-ttu-id="a4f2c-101">一个用于更新 ChartPointFormat 对象上的数据的接口，可用于`chartPointFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="a4f2c-101">An interface for updating data on the ChartPointFormat object, for use in `chartPointFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="a4f2c-102">.</span><span class="sxs-lookup"><span data-stu-id="a4f2c-102"></span></span>'
+    summary: '一个用于更新 ChartPointFormat 对象上的数据的接口，可用于`chartPointFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartPointFormatUpdateData
     fullName: Excel.Interfaces.ChartPointFormatUpdateData
     langs:
