--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartplotareaformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartplotareaformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartPlotAreaFormatUpdateData:interface'
-    summary: '<span data-ttu-id="ae829-101">一个用于更新 ChartPlotAreaFormat 对象上的数据的接口，可用于`chartPlotAreaFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="ae829-101">An interface for updating data on the ChartPlotAreaFormat object, for use in `chartPlotAreaFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="ae829-102">.</span><span class="sxs-lookup"><span data-stu-id="ae829-102"></span></span>'
+    summary: '一个用于更新 ChartPlotAreaFormat 对象上的数据的接口，可用于`chartPlotAreaFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartPlotAreaFormatUpdateData
     fullName: Excel.Interfaces.ChartPlotAreaFormatUpdateData
     langs:
