commit bilingual contents

--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartformatstringloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartformatstringloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartFormatStringLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="a3684-101">表示与图表相关的对象中包含文本的子字符串，如 ChartTitle 对象、ChartAxisTitle 对象等。</span><span class="sxs-lookup"><span data-stu-id="a3684-101">Represents the substring in chart related objects that contains text, like ChartTitle object, ChartAxisTitle object, etc.</span></span>
+      表示与图表相关的对象中包含文本的子字符串，如 ChartTitle 对象、ChartAxisTitle 对象等。
 
-      <span data-ttu-id="a3684-102">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a3684-102">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartFormatStringLoadOptions
     fullName: Excel.Interfaces.ChartFormatStringLoadOptions
     langs:
@@ -15,7 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ChartFormatStringLoadOptions#$all:member'
       - 'excel!Excel.Interfaces.ChartFormatStringLoadOptions#font:member'
   - uid: 'excel!Excel.Interfaces.ChartFormatStringLoadOptions#$all:member'
-    summary: '<span data-ttu-id="a3684-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="a3684-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="a3684-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="a3684-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="a3684-105">).</span><span class="sxs-lookup"><span data-stu-id="a3684-105"></span></span>'
+    summary: '`$all`为 LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).'
     name: $all
     fullName: $all
     langs:
@@ -28,9 +28,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartFormatStringLoadOptions#font:member'
     summary: |-
-      <span data-ttu-id="a3684-106">代表 "图表字符" 对象的字体属性，如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="a3684-106">Represents the font attributes, such as font name, font size, color, etc. of chart characters object.</span></span>
+      代表 "图表字符" 对象的字体属性，如字体名称、字体大小、颜色等。
 
-      <span data-ttu-id="a3684-107">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a3684-107">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
