--- a/docs/docs-ref-autogen/excel/excel/excel.datavalidationalertstyle.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.datavalidationalertstyle.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.DataValidationAlertStyle:enum'
     summary: |-
-      <span data-ttu-id="64142-101">表示数据有效性错误警告样式。</span><span class="sxs-lookup"><span data-stu-id="64142-101">Represents Data validation error alert style.</span></span> <span data-ttu-id="64142-102">默认值为 "停止"。</span><span class="sxs-lookup"><span data-stu-id="64142-102">The default is "Stop".</span></span>
+      表示数据有效性错误警告样式。 默认值为 "停止"。
 
-      <span data-ttu-id="64142-103">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="64142-103">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.DataValidationAlertStyle
     fullName: Excel.DataValidationAlertStyle
     langs:
