--- a/docs/docs-ref-autogen/excel/excel/excel.datavalidationoperator.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.datavalidationoperator.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.DataValidationOperator:enum'
     summary: |-
-      <span data-ttu-id="dc8de-101">表示数据验证运算符枚举。</span><span class="sxs-lookup"><span data-stu-id="dc8de-101">Represents Data validation operator enum.</span></span>
+      表示数据验证运算符枚举。
 
-      <span data-ttu-id="dc8de-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="dc8de-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.DataValidationOperator
     fullName: Excel.DataValidationOperator
     langs:
