--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charterrorbarsformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.charterrorbarsformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData:interface'
-    summary: '<span data-ttu-id="9e443-101">一个用于更新 ChartErrorBarsFormat 对象上的数据的接口，可用于`chartErrorBarsFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="9e443-101">An interface for updating data on the ChartErrorBarsFormat object, for use in `chartErrorBarsFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="9e443-102">.</span><span class="sxs-lookup"><span data-stu-id="9e443-102"></span></span>'
+    summary: '一个用于更新 ChartErrorBarsFormat 对象上的数据的接口，可用于`chartErrorBarsFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartErrorBarsFormatUpdateData
     fullName: Excel.Interfaces.ChartErrorBarsFormatUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData#line:member'
   - uid: 'excel!Excel.Interfaces.ChartErrorBarsFormatUpdateData#line:member'
     summary: |-
-      <span data-ttu-id="9e443-103">表示图表线条格式。</span><span class="sxs-lookup"><span data-stu-id="9e443-103">Represents the chart line formatting.</span></span>
+      表示图表线条格式。
 
-      <span data-ttu-id="9e443-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9e443-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: line
     fullName: line
     langs:
