--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartformatstringupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.chartformatstringupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartFormatStringUpdateData:interface'
-    summary: '<span data-ttu-id="6cec2-101">一个用于更新 ChartFormatString 对象上的数据的接口，可用于`chartFormatString.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="6cec2-101">An interface for updating data on the ChartFormatString object, for use in `chartFormatString.set({ ... })`</span></span><!-- --><span data-ttu-id="6cec2-102">.</span><span class="sxs-lookup"><span data-stu-id="6cec2-102"></span></span>'
+    summary: '一个用于更新 ChartFormatString 对象上的数据的接口，可用于`chartFormatString.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartFormatStringUpdateData
     fullName: Excel.Interfaces.ChartFormatStringUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ChartFormatStringUpdateData#font:member'
   - uid: 'excel!Excel.Interfaces.ChartFormatStringUpdateData#font:member'
     summary: |-
-      <span data-ttu-id="6cec2-103">代表 "图表字符" 对象的字体属性，如字体名称、字体大小、颜色等。</span><span class="sxs-lookup"><span data-stu-id="6cec2-103">Represents the font attributes, such as font name, font size, color, etc. of chart characters object.</span></span>
+      代表 "图表字符" 对象的字体属性，如字体名称、字体大小、颜色等。
 
-      <span data-ttu-id="6cec2-104">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="6cec2-104">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
     fullName: font
     langs:
