--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.colorscaleconditionalformatupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.colorscaleconditionalformatupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ColorScaleConditionalFormatUpdateData:interface'
-    summary: '<span data-ttu-id="b93dc-101">一个用于更新 ColorScaleConditionalFormat 对象上的数据的接口，可用于`colorScaleConditionalFormat.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="b93dc-101">An interface for updating data on the ColorScaleConditionalFormat object, for use in `colorScaleConditionalFormat.set({ ... })`</span></span><!-- --><span data-ttu-id="b93dc-102">.</span><span class="sxs-lookup"><span data-stu-id="b93dc-102"></span></span>'
+    summary: '一个用于更新 ColorScaleConditionalFormat 对象上的数据的接口，可用于`colorScaleConditionalFormat.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
     fullName: Excel.Interfaces.ColorScaleConditionalFormatUpdateData
     langs:
@@ -12,9 +12,9 @@ items:
       - 'excel!Excel.Interfaces.ColorScaleConditionalFormatUpdateData#criteria:member'
   - uid: 'excel!Excel.Interfaces.ColorScaleConditionalFormatUpdateData#criteria:member'
     summary: |-
-      <span data-ttu-id="b93dc-103">色阶的条件。</span><span class="sxs-lookup"><span data-stu-id="b93dc-103">The criteria of the color scale.</span></span> <span data-ttu-id="b93dc-104">使用两个点的色阶时，中点是可选的。</span><span class="sxs-lookup"><span data-stu-id="b93dc-104">Midpoint is optional when using a two point color scale.</span></span>
+      色阶的条件。 使用两个点的色阶时，中点是可选的。
 
-      <span data-ttu-id="b93dc-105">\[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b93dc-105">\[ [API set: ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: criteria
     fullName: criteria
     langs:
