--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.lineupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.interfaces.lineupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.LineUpdateData:interface'
-    summary: '<span data-ttu-id="7e635-101">一个用于更新 Line 对象上的数据的接口，可用于`line.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="7e635-101">An interface for updating data on the Line object, for use in `line.set({ ... })`</span></span><!-- --><span data-ttu-id="7e635-102">.</span><span class="sxs-lookup"><span data-stu-id="7e635-102"></span></span>'
+    summary: '一个用于更新 Line 对象上的数据的接口，可用于`line.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.LineUpdateData
     fullName: Excel.Interfaces.LineUpdateData
     langs:
@@ -18,9 +18,9 @@ items:
       - 'excel!Excel.Interfaces.LineUpdateData#endArrowheadWidth:member'
   - uid: 'excel!Excel.Interfaces.LineUpdateData#beginArrowheadLength:member'
     summary: |-
-      <span data-ttu-id="7e635-103">表示指定线条始端的箭头长度。</span><span class="sxs-lookup"><span data-stu-id="7e635-103">Represents the length of the arrowhead at the beginning of the specified line.</span></span>
+      表示指定线条始端的箭头长度。
 
-      <span data-ttu-id="7e635-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e635-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: beginArrowheadLength
     fullName: beginArrowheadLength
     langs:
@@ -33,9 +33,9 @@ items:
           - 'excel!Excel.Interfaces.LineUpdateData#beginArrowheadLength~0:complex'
   - uid: 'excel!Excel.Interfaces.LineUpdateData#beginArrowheadStyle:member'
     summary: |-
-      <span data-ttu-id="7e635-105">表示指定线条始端的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="7e635-105">Represents the style of the arrowhead at the beginning of the specified line.</span></span>
+      表示指定线条始端的箭头样式。
 
-      <span data-ttu-id="7e635-106">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e635-106">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: beginArrowheadStyle
     fullName: beginArrowheadStyle
     langs:
@@ -48,9 +48,9 @@ items:
           - 'excel!Excel.Interfaces.LineUpdateData#beginArrowheadStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.LineUpdateData#beginArrowheadWidth:member'
     summary: |-
-      <span data-ttu-id="7e635-107">表示指定线条始端的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="7e635-107">Represents the width of the arrowhead at the beginning of the specified line.</span></span>
+      表示指定线条始端的箭头宽度。
 
-      <span data-ttu-id="7e635-108">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e635-108">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: beginArrowheadWidth
     fullName: beginArrowheadWidth
     langs:
@@ -63,9 +63,9 @@ items:
           - 'excel!Excel.Interfaces.LineUpdateData#beginArrowheadWidth~0:complex'
   - uid: 'excel!Excel.Interfaces.LineUpdateData#connectorType:member'
     summary: |-
-      <span data-ttu-id="7e635-109">表示线条的连接器类型。</span><span class="sxs-lookup"><span data-stu-id="7e635-109">Represents the connector type for the line.</span></span>
+      表示线条的连接器类型。
 
-      <span data-ttu-id="7e635-110">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e635-110">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: connectorType
     fullName: connectorType
     langs:
@@ -78,9 +78,9 @@ items:
           - 'excel!Excel.Interfaces.LineUpdateData#connectorType~0:complex'
   - uid: 'excel!Excel.Interfaces.LineUpdateData#endArrowheadLength:member'
     summary: |-
-      <span data-ttu-id="7e635-111">表示指定线条末端的箭头长度。</span><span class="sxs-lookup"><span data-stu-id="7e635-111">Represents the length of the arrowhead at the end of the specified line.</span></span>
+      表示指定线条末端的箭头长度。
 
-      <span data-ttu-id="7e635-112">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e635-112">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endArrowheadLength
     fullName: endArrowheadLength
     langs:
@@ -93,9 +93,9 @@ items:
           - 'excel!Excel.Interfaces.LineUpdateData#endArrowheadLength~0:complex'
   - uid: 'excel!Excel.Interfaces.LineUpdateData#endArrowheadStyle:member'
     summary: |-
-      <span data-ttu-id="7e635-113">表示指定线条末端的箭头样式。</span><span class="sxs-lookup"><span data-stu-id="7e635-113">Represents the style of the arrowhead at the end of the specified line.</span></span>
+      表示指定线条末端的箭头样式。
 
-      <span data-ttu-id="7e635-114">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e635-114">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endArrowheadStyle
     fullName: endArrowheadStyle
     langs:
@@ -108,9 +108,9 @@ items:
           - 'excel!Excel.Interfaces.LineUpdateData#endArrowheadStyle~0:complex'
   - uid: 'excel!Excel.Interfaces.LineUpdateData#endArrowheadWidth:member'
     summary: |-
-      <span data-ttu-id="7e635-115">表示指定线条末端的箭头宽度。</span><span class="sxs-lookup"><span data-stu-id="7e635-115">Represents the width of the arrowhead at the end of the specified line.</span></span>
+      表示指定线条末端的箭头宽度。
 
-      <span data-ttu-id="7e635-116">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="7e635-116">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: endArrowheadWidth
     fullName: endArrowheadWidth
     langs:
