--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.listdatavalidation.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.listdatavalidation.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ListDataValidation:interface'
     summary: |-
-      <span data-ttu-id="c6f77-101">表示列表数据验证条件。</span><span class="sxs-lookup"><span data-stu-id="c6f77-101">Represents the List data validation criteria.</span></span>
+      表示列表数据验证条件。
 
-      <span data-ttu-id="c6f77-102">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c6f77-102">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ListDataValidation
     fullName: Excel.ListDataValidation
     langs:
@@ -16,9 +16,9 @@ items:
       - 'excel!Excel.ListDataValidation#source:member'
   - uid: 'excel!Excel.ListDataValidation#inCellDropDown:member'
     summary: |-
-      <span data-ttu-id="c6f77-103">是否显示单元格下拉菜单中的列表，默认为 true。</span><span class="sxs-lookup"><span data-stu-id="c6f77-103">Displays the list in cell drop down or not, it defaults to true.</span></span>
+      是否显示单元格下拉菜单中的列表，默认为 true。
 
-      <span data-ttu-id="c6f77-104">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c6f77-104">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: inCellDropDown
     fullName: inCellDropDown
     langs:
@@ -31,9 +31,9 @@ items:
           - boolean
   - uid: 'excel!Excel.ListDataValidation#source:member'
     summary: |-
-      <span data-ttu-id="c6f77-105">数据验证列表的源。设置值时，可以将其作为 Excel 区域对象传入，或包含逗号分隔的数字、布尔值或日期的字符串。</span><span class="sxs-lookup"><span data-stu-id="c6f77-105">Source of the list for data validation When setting the value, it can be passed in as a Excel Range object, or a string that contains comma separated number, boolean or date.</span></span>
+      数据验证列表的源。设置值时，可以将其作为 Excel 区域对象传入，或包含逗号分隔的数字、布尔值或日期的字符串。
 
-      <span data-ttu-id="c6f77-106">\[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="c6f77-106">\[ [API set: ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: source
     fullName: source
     langs:
