--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.printcomments.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.printcomments.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.PrintComments:enum'
-    summary: '<span data-ttu-id="95b58-101">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="95b58-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.PrintComments
     fullName: Excel.PrintComments
     langs:
@@ -13,7 +13,7 @@ items:
       - 'excel!Excel.PrintComments.inPlace:member'
       - 'excel!Excel.PrintComments.noComments:member'
   - uid: 'excel!Excel.PrintComments.endSheet:member'
-    summary: <span data-ttu-id="95b58-102">批注打印为工作表末尾的尾注。</span><span class="sxs-lookup"><span data-stu-id="95b58-102">Comments will be printed as end notes at the end of the worksheet.</span></span>
+    summary: 批注打印为工作表末尾的尾注。
     name: endSheet
     fullName: endSheet
     langs:
@@ -21,7 +21,7 @@ items:
     type: field
     numericValue: '"EndSheet"'
   - uid: 'excel!Excel.PrintComments.inPlace:member'
-    summary: <span data-ttu-id="95b58-103">批注打印在其插入工作表的位置。</span><span class="sxs-lookup"><span data-stu-id="95b58-103">Comments will be printed where they were inserted in the worksheet.</span></span>
+    summary: 批注打印在其插入工作表的位置。
     name: inPlace
     fullName: inPlace
     langs:
@@ -29,7 +29,7 @@ items:
     type: field
     numericValue: '"InPlace"'
   - uid: 'excel!Excel.PrintComments.noComments:member'
-    summary: <span data-ttu-id="95b58-104">将不打印批注。</span><span class="sxs-lookup"><span data-stu-id="95b58-104">Comments will not be printed.</span></span>
+    summary: 将不打印批注。
     name: noComments
     fullName: noComments
     langs:
