--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.printorder.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.printorder.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.PrintOrder:enum'
-    summary: '<span data-ttu-id="629aa-101">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="629aa-101">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>'
+    summary: '\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]'
     name: Excel.PrintOrder
     fullName: Excel.PrintOrder
     langs:
@@ -12,7 +12,7 @@ items:
       - 'excel!Excel.PrintOrder.downThenOver:member'
       - 'excel!Excel.PrintOrder.overThenDown:member'
   - uid: 'excel!Excel.PrintOrder.downThenOver:member'
-    summary: <span data-ttu-id="629aa-102">向下处理行，然后向右逐个处理页或页面字段。</span><span class="sxs-lookup"><span data-stu-id="629aa-102">Process down the rows before processing across pages or page fields to the right.</span></span>
+    summary: 向下处理行，然后向右逐个处理页或页面字段。
     name: downThenOver
     fullName: downThenOver
     langs:
@@ -20,7 +20,7 @@ items:
     type: field
     numericValue: '"DownThenOver"'
   - uid: 'excel!Excel.PrintOrder.overThenDown:member'
-    summary: <span data-ttu-id="629aa-103">向右逐个处理页或页面字段，然后向下处理行。</span><span class="sxs-lookup"><span data-stu-id="629aa-103">Process across pages or page fields to the right before moving down the rows.</span></span>
+    summary: 向右逐个处理页或页面字段，然后向下处理行。
     name: overThenDown
     fullName: overThenDown
     langs:
