--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.settingschangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.settingschangedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.SettingsChangedEventArgs:interface'
     summary: |-
-      <span data-ttu-id="fbd0c-101">提供有关引发了 SettingsChanged 事件的设置的信息。</span><span class="sxs-lookup"><span data-stu-id="fbd0c-101">Provides information about the setting that raised the SettingsChanged event</span></span>
+      提供有关引发了 SettingsChanged 事件的设置的信息。
 
-      <span data-ttu-id="fbd0c-102">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fbd0c-102">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.SettingsChangedEventArgs
     fullName: Excel.SettingsChangedEventArgs
     langs:
@@ -15,9 +15,9 @@ items:
       - 'excel!Excel.SettingsChangedEventArgs#settings:member'
   - uid: 'excel!Excel.SettingsChangedEventArgs#settings:member'
     summary: |-
-      <span data-ttu-id="fbd0c-103">获取表示引发了 SettingsChanged 事件的 binding 的 setting 对象。</span><span class="sxs-lookup"><span data-stu-id="fbd0c-103">Gets the Setting object that represents the binding that raised the SettingsChanged event</span></span>
+      获取表示引发了 SettingsChanged 事件的 binding 的 setting 对象。
 
-      <span data-ttu-id="fbd0c-104">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="fbd0c-104">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: settings
     fullName: settings
     langs:
