--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.shapeactivatedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.shapeactivatedeventargs.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ShapeActivatedEventArgs:interface'
     summary: |-
-      <span data-ttu-id="026ee-101">提供有关引发了激活事件的形状的信息。</span><span class="sxs-lookup"><span data-stu-id="026ee-101">Provides information about the shape that raised the Activated event.</span></span>
+      提供有关引发了激活事件的形状的信息。
 
-      <span data-ttu-id="026ee-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="026ee-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeActivatedEventArgs
     fullName: Excel.ShapeActivatedEventArgs
     langs:
@@ -17,9 +17,9 @@ items:
       - 'excel!Excel.ShapeActivatedEventArgs#worksheetId:member'
   - uid: 'excel!Excel.ShapeActivatedEventArgs#shapeId:member'
     summary: |-
-      <span data-ttu-id="026ee-103">获取已激活的形状的 ID。</span><span class="sxs-lookup"><span data-stu-id="026ee-103">Gets the id of the activated shape.</span></span>
+      获取已激活的形状的 ID。
 
-      <span data-ttu-id="026ee-104">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="026ee-104">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: shapeId
     fullName: shapeId
     langs:
@@ -32,9 +32,9 @@ items:
           - string
   - uid: 'excel!Excel.ShapeActivatedEventArgs#type:member'
     summary: |-
-      <span data-ttu-id="026ee-105">获取事件的类型。</span><span class="sxs-lookup"><span data-stu-id="026ee-105">Gets the type of the event.</span></span> <span data-ttu-id="026ee-106">有关详细信息，请参阅 Excel.EventType。</span><span class="sxs-lookup"><span data-stu-id="026ee-106">See Excel.EventType for details.</span></span>
+      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
-      <span data-ttu-id="026ee-107">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="026ee-107">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -47,9 +47,9 @@ items:
           - '"ShapeActivated"'
   - uid: 'excel!Excel.ShapeActivatedEventArgs#worksheetId:member'
     summary: |-
-      <span data-ttu-id="026ee-108">获取其中的形状已启用的工作表的 ID。</span><span class="sxs-lookup"><span data-stu-id="026ee-108">Gets the id of the worksheet in which the shape is activated.</span></span>
+      获取其中的形状已启用的工作表的 ID。
 
-      <span data-ttu-id="026ee-109">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="026ee-109">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheetId
     fullName: worksheetId
     langs:
