--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.shapefilltype.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.shapefilltype.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ShapeFillType:enum'
     summary: |-
-      <span data-ttu-id="44b5d-101">指定形状的填充类型。</span><span class="sxs-lookup"><span data-stu-id="44b5d-101">Specifies a shape's fill type.</span></span>
+      指定形状的填充类型。
 
-      <span data-ttu-id="44b5d-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="44b5d-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeFillType
     fullName: Excel.ShapeFillType
     langs:
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.ShapeFillType.pictureAndTexture:member'
       - 'excel!Excel.ShapeFillType.solid:member'
   - uid: 'excel!Excel.ShapeFillType.gradient:member'
-    summary: <span data-ttu-id="44b5d-103">渐变填充。</span><span class="sxs-lookup"><span data-stu-id="44b5d-103">Gradient fill.</span></span>
+    summary: 渐变填充。
     name: gradient
     fullName: gradient
     langs:
@@ -27,7 +27,7 @@ items:
     type: field
     numericValue: '"Gradient"'
   - uid: 'excel!Excel.ShapeFillType.mixed:member'
-    summary: <span data-ttu-id="44b5d-104">混和填充。</span><span class="sxs-lookup"><span data-stu-id="44b5d-104">Mixed fill.</span></span>
+    summary: 混和填充。
     name: mixed
     fullName: mixed
     langs:
@@ -35,7 +35,7 @@ items:
     type: field
     numericValue: '"Mixed"'
   - uid: 'excel!Excel.ShapeFillType.noFill:member'
-    summary: <span data-ttu-id="44b5d-105">无填充。</span><span class="sxs-lookup"><span data-stu-id="44b5d-105">No fill.</span></span>
+    summary: 无填充。
     name: noFill
     fullName: noFill
     langs:
@@ -43,7 +43,7 @@ items:
     type: field
     numericValue: '"NoFill"'
   - uid: 'excel!Excel.ShapeFillType.pattern:member'
-    summary: <span data-ttu-id="44b5d-106">图案填充。</span><span class="sxs-lookup"><span data-stu-id="44b5d-106">Pattern fill.</span></span>
+    summary: 图案填充。
     name: pattern
     fullName: pattern
     langs:
@@ -51,7 +51,7 @@ items:
     type: field
     numericValue: '"Pattern"'
   - uid: 'excel!Excel.ShapeFillType.pictureAndTexture:member'
-    summary: <span data-ttu-id="44b5d-107">图片和纹理填充。</span><span class="sxs-lookup"><span data-stu-id="44b5d-107">Picture and texture fill.</span></span>
+    summary: 图片和纹理填充。
     name: pictureAndTexture
     fullName: pictureAndTexture
     langs:
@@ -59,7 +59,7 @@ items:
     type: field
     numericValue: '"PictureAndTexture"'
   - uid: 'excel!Excel.ShapeFillType.solid:member'
-    summary: <span data-ttu-id="44b5d-108">单色填充。</span><span class="sxs-lookup"><span data-stu-id="44b5d-108">Solid fill.</span></span>
+    summary: 单色填充。
     name: solid
     fullName: solid
     langs:
