--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.shapetexthorizontaloverflow.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.shapetexthorizontaloverflow.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.ShapeTextHorizontalOverflow:enum'
     summary: |-
-      <span data-ttu-id="e5a0d-101">指定形状中的文本框架的水平溢出。</span><span class="sxs-lookup"><span data-stu-id="e5a0d-101">Specifies the horizontal overflow for the text frame in a shape.</span></span>
+      指定形状中的文本框架的水平溢出。
 
-      <span data-ttu-id="e5a0d-102">\[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="e5a0d-102">\[ [API set: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ShapeTextHorizontalOverflow
     fullName: Excel.ShapeTextHorizontalOverflow
     langs:
