commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.bindings.yml
+++ b/docs/docs-ref-autogen/office/office/office.bindings.yml
@@ -35,7 +35,7 @@ items:
 
       对于 Excel，名称列表参数可以引用已命名的区域或表。
 
-      默认情况下，在 Excel 中添加表会为你添加的第一个表分配名称“Table1”，为你添加的第二个表分配名称“Table2”，以此类推。 若要在 Excel UI 中为表分配有意义的名称，请使用功能区的 "表格工具\|设计" 选项卡上的 "表格名称" 属性。
+      默认情况下，在 Excel 中添加表会为你添加的第一个表分配名称“Table1”，为你添加的第二个表分配名称“Table2”，以此类推。 若要在 Excel UI 中为表分配有意义的名称，请使用功能区的 "表格工具 \| 设计" 选项卡上的 "表格名称" 属性。
 
       **注意**：在 Excel 中，当指定表作为已命名项目时，必须完全限定该名称以在表名称中包括工作表名称，格式如下： "Sheet1！Table1
 
@@ -128,7 +128,7 @@ items:
           type:
             - 'office!Office.AddBindingFromNamedItemOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是表示指定的已命名项目的 Binding 对象。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是表示指定的已命名项目的 Binding 对象。'
           type:
             - 'office!Office.Bindings#addFromNamedItemAsync~0:complex'
   - uid: 'office!Office.Bindings#addFromNamedItemAsync:member(2)'
@@ -138,7 +138,7 @@ items:
 
       对于 Excel，名称列表参数可以引用已命名的区域或表。
 
-      默认情况下，在 Excel 中添加表会为你添加的第一个表分配名称“Table1”，为你添加的第二个表分配名称“Table2”，以此类推。 若要在 Excel UI 中为表分配有意义的名称，请使用功能区的 "表格工具\|设计" 选项卡上的 "表格名称" 属性。
+      默认情况下，在 Excel 中添加表会为你添加的第一个表分配名称“Table1”，为你添加的第二个表分配名称“Table2”，以此类推。 若要在 Excel UI 中为表分配有意义的名称，请使用功能区的 "表格工具 \| 设计" 选项卡上的 "表格名称" 属性。
 
       **注意**：在 Excel 中，当指定表作为已命名项目时，必须完全限定该名称以在表名称中包括工作表名称，格式如下： "Sheet1！Table1
 
@@ -168,7 +168,7 @@ items:
           type:
             - 'office!Office.BindingType:enum'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是表示指定的已命名项目的 Binding 对象。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是表示指定的已命名项目的 Binding 对象。'
           type:
             - 'office!Office.Bindings#addFromNamedItemAsync~1:complex'
   - uid: 'office!Office.Bindings#addFromPromptAsync:member(1)'
@@ -215,7 +215,7 @@ items:
           type:
             - 'office!Office.AddBindingFromPromptOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是代表用户指定的选定内容的 Binding 对象。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是代表用户指定的选定内容的 Binding 对象。'
           type:
             - 'office!Office.Bindings#addFromPromptAsync~0:complex'
   - uid: 'office!Office.Bindings#addFromPromptAsync:member(2)'
@@ -241,7 +241,7 @@ items:
           type:
             - 'office!Office.BindingType:enum'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是代表用户指定的选定内容的 Binding 对象。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是代表用户指定的选定内容的 Binding 对象。'
           type:
             - 'office!Office.Bindings#addFromPromptAsync~1:complex'
   - uid: 'office!Office.Bindings#addFromSelectionAsync:member(1)'
@@ -295,7 +295,7 @@ items:
           type:
             - 'office!Office.AddBindingFromSelectionOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是代表用户指定的选定内容的 Binding 对象。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是代表用户指定的选定内容的 Binding 对象。'
           type:
             - 'office!Office.Bindings#addFromSelectionAsync~0:complex'
   - uid: 'office!Office.Bindings#addFromSelectionAsync:member(2)'
@@ -329,11 +329,11 @@ items:
           type:
             - 'office!Office.BindingType:enum'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是代表用户指定的选定内容的 Binding 对象。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是代表用户指定的选定内容的 Binding 对象。'
           type:
             - 'office!Office.Bindings#addFromSelectionAsync~1:complex'
   - uid: 'office!Office.Bindings#document:member'
-    summary: '获取表示与此组绑定关联的文档的[document](xref:office!Office.Document:interface)对象。'
+    summary: '获取一个[Office.Document](xref:office!Office.Document:interface)对象，该对象表示与此集合绑定相关联的文档。'
     name: document
     fullName: document
     langs:
@@ -371,7 +371,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个数组，其中包含为所引用的绑定对象创建的每个绑定。'
+          description: '回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个数组，其中包含为所引用的绑定对象创建的每个绑定。'
           type:
             - 'office!Office.Bindings#getAllAsync~0:complex'
   - uid: 'office!Office.Bindings#getAllAsync:member(2)'
@@ -415,7 +415,7 @@ items:
         description: ''
       parameters:
         - id: callback
-          description: '回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是一个数组，其中包含为所引用的绑定对象创建的每个绑定。'
+          description: '回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是一个数组，其中包含为所引用的绑定对象创建的每个绑定。'
           type:
             - 'office!Office.Bindings#getAllAsync~1:complex'
   - uid: 'office!Office.Bindings#getByIdAsync:member(1)'
@@ -451,7 +451,7 @@ items:
           type:
             - 'office!Office.AsyncContextOptions:interface'
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是由调用中的 id 指定的 Binding 对象。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是由调用中的 id 指定的 Binding 对象。'
           type:
             - 'office!Office.Bindings#getByIdAsync~0:complex'
   - uid: 'office!Office.Bindings#getByIdAsync:member(2)'
@@ -497,7 +497,7 @@ items:
           type:
             - string
         - id: callback
-          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. 结果`value`的属性是由调用中的 id 指定的 Binding 对象。'
+          description: '可选。 回调返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->. `value`结果的属性是由调用中的 id 指定的 Binding 对象。'
           type:
             - 'office!Office.Bindings#getByIdAsync~1:complex'
   - uid: 'office!Office.Bindings#releaseByIdAsync:member(1)'
