--- a/docs/docs-ref-autogen/office/office/office.table.yml
+++ b/docs/docs-ref-autogen/office/office/office.table.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'office!Office.Table:enum'
-    summary: '指定[表格格式方法](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-tables#format-a-table)的`cells` cellFormat 参数中属性的枚举值<!-- -->.'
+    summary: '指定 `cells` [表格格式方法](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-tables#format-a-table)的 cellFormat 参数中属性的枚举值<!-- -->.'
     name: Office.Table
     fullName: Office.Table
     langs:
