--- a/docs/docs-ref-autogen/office/office/officeextension.embeddedsession.yml
+++ b/docs/docs-ref-autogen/office/office/officeextension.embeddedsession.yml
@@ -11,7 +11,7 @@ items:
       - 'office!OfficeExtension.EmbeddedSession:constructor(1)'
       - 'office!OfficeExtension.EmbeddedSession#init:member(1)'
   - uid: 'office!OfficeExtension.EmbeddedSession:constructor(1)'
-    summary: 构造`EmbeddedSession`类的新实例
+    summary: 构造类的新实例 `EmbeddedSession`
     name: '(constructor)(url, options)'
     fullName: '(constructor)(url, options)'
     langs:
