--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.custompropertycollection.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.custompropertycollection.yml
@@ -149,7 +149,7 @@ items:
         type:
           - 'excel!Excel.CustomPropertyCollection#items~0:complex'
   - uid: 'excel!Excel.CustomPropertyCollection#load:member(1)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(options)
     fullName: load(options)
     langs:
@@ -167,7 +167,7 @@ items:
           type:
             - 'excel!Excel.CustomPropertyCollection#load~0:complex'
   - uid: 'excel!Excel.CustomPropertyCollection#load:member(2)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -185,7 +185,7 @@ items:
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.CustomPropertyCollection#load:member(3)'
-    summary: 将命令加入队列以加载对象的指定属性。 在 `context.sync()` 读取属性之前，必须先调用。
+    summary: 将命令加入队列以加载对象的指定属性。 阅读属性前必须先调用 `context.sync()`。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
